--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Hope
 middle_name: S
 last_name: Lancaster
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Send me an email if you have a question or want to connect.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
