--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,71 +2,46 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Hope S. Lancaster
     - name: Languages
-      value: English, German
+      value: English
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Vanderbilt Univeristy, Nashville, TN, USA
+      year: 2015
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Child Language and Literacy Disorders (Major)
+        - Research Methods (Minor)
+    - title: B.A. Cum Laude
+      institution: University of Illinois at Chicago, Chicago, IL, USA
+      year: 2008
       description:
-        - Description 1.
-        - Description 2.
+        - Psychology (Major) 
+        - Russian Language (Minor)
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Scientist
+      institution: Center for Childhood Deafness Language and Learning, Boys Town National Research Hospital
+      year: 2020 - Current
+    - title: Postdoctoral Fellow
+      institution: Arizona State University, Phoenix, AZ, USA
+      year: 2015 - 2020
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+        - NIH F32 Postdoctoral Fellow in Institutes of Engineering (2017 - 2020)
+        - Postdoctoral Scholar in Scherer Lab (2016 - 2017)
+        - Postdoctoral Scholar in Speech Genetics Lab (2015 - 2016)
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="https://ldbase.org/projects/e040e2b7-fcaf-4f15-a51c-906e304ae7ce">al-folio</a>
+      year: 2016 - 2023
+      description: A meta-analysis on speech, language, and reading skills in young children with nonsyndromic cleft lip and/or palate.
 
 - title: Honors and Awards
   type: time_table
@@ -75,23 +50,25 @@
       items:
         - Nobel Prize in Physics
         - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Communication Disoders.
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Developmental Language Disorder.
+        - Dyslexia.
+        - Speech Disorders.
+        - Cleft palate
+    - title: Research Methods.
       items:
-        - Description 1.
-        - Description 2.
+        - Systematic review.
+        - Meta-analysis.
+        - Multivariate statistics.
+        - Machine learning.
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Dancing, D & D
