--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -46,10 +46,13 @@
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2019
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
+        - Helmsley Scholarship, Helmsley Charitable Trust, Cold Springs Harbor Laboratory
+   - year: 2014
+      items:
+        - Research-Mentor Pair Travel Award, American Hearing and Speech Association
+        - NIH Travel Award to Symposium on Research in Child Language Disorders
 
 
 - title: Academic Interests
