--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -48,10 +48,10 @@
   contents:
     - year: 2019
       items:
-        - Helmsley Scholarship, Helmsley Charitable Trust, Cold Springs Harbor Laboratory
+        - Helmsley Scholarship
    - year: 2014
       items:
-        - Research-Mentor Pair Travel Award, American Hearing and Speech Association
+        - Research-Mentor Pair Travel Award
         - NIH Travel Award to Symposium on Research in Child Language Disorders
 
 
